--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,3 +1,5 @@
+<h1> Enter New Bookmark: </h1>
+
 <form action="/bookmarks" method="post">
   <input type="text" name="title" placeholder="Title"/>
   <input type="text" name="url" placeholder="URL" />
