Added hyperlinks to all views - allows  navigation between home, new, and edit views without entering URL directly

--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -5,3 +5,6 @@
   <input type="text" name="url" placeholder="URL" />
   <input type="submit" value="add bookmark" />
 </form>
+
+
+<a href="http://localhost:9292/bookmarks"><input type=button value='return without saving?'></a>
