--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -15,3 +15,5 @@
     </li>
   <% end %>
  </ul>
+
+ <a href="http://localhost:9292/bookmarks/new"><input type=button value='add a new bookmark here'></a>
