--- a/views/bookmarks/edit.erb
+++ b/views/bookmarks/edit.erb
@@ -1,6 +1,10 @@
+<h1> Update Bookmark </h1>
+
 <form action="/bookmarks/<%= @bookmark.id %>" method="post">
   <input type="hidden" name="_method" value="PATCH" />
   <input type="text" name="url" value="<%= @bookmark.url %>" />
   <input type="text" name="title" value="<%= @bookmark.title %>" />
   <input type="submit" value="Submit" />
 </form>
+
+<a href="http://localhost:9292/bookmarks"><input type=button value='return without saving?'></a>
